Fixing overlap
Fixing overlap issue between video player and the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
       }
       .playicon{
         height:19.688rem;
-        width:35rem;
+        width:560px;
         background-color: black;
         background: url('../img/playicon-s.png') , url('../../Mockups/1430746_2f43_2.jpg');
         background-repeat: no-repeat;
